Game is now fully functional.  Added code for player interaction, and altered enemy template to model aliens. Also added a spash screen and logo

--- a/Save The Humans/Save The Humans.Windows/Save The Humans.Windows.csproj
+++ b/Save The Humans/Save The Humans.Windows/Save The Humans.Windows.csproj
@@ -126,10 +126,9 @@
     <None Include="Save The Humans.Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Logo.scale-100.png" />
-    <Content Include="Assets\SmallLogo.scale-100.png" />
-    <Content Include="Assets\SplashScreen.scale-100.png" />
-    <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\Logo.png" />
+    <Content Include="Assets\SmallLogo.png" />
+    <Content Include="Assets\SplashScreen.png" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
